6986863: ProfileDeferralMgr throwing ConcurrentModificationException

Reviewed-by: kizune