jdk/src/share/native/sun/java2d/cmm/lcms/LCMS.c
@@ -611,13 +611,28 @@ JNIEXPORT jobject JNICALL Java_sun_java2d_cmm_lcms_LCMS_getProfileID
     jclass clsLcmsProfile;
     jobject cmmProfile;
     jfieldID fid;
+    jclass pcls;
+    jmethodID mid;
 
     if (pf == NULL) {
         return NULL;
     }
-    fid = (*env)->GetFieldID (env,
-        (*env)->GetObjectClass(env, pf),
-        "cmmProfile", "Lsun/java2d/cmm/Profile;");
+
+    pcls = (*env)->GetObjectClass(env, pf);
+    if (pcls == NULL) {
+        return NULL;
+    }
+    mid = (*env)->GetMethodID(env, pcls, "activate", "()V");
+    if (mid == NULL) {
+        return NULL;
+    }
+    (*env)->CallVoidMethod(env, pf, mid);
+    if ((*env)->ExceptionOccurred(env)) {
+        return NULL;
+    }
+
+    fid = (*env)->GetFieldID(env, pcls, "cmmProfile",
+                             "Lsun/java2d/cmm/Profile;");
     if (fid == NULL) {
         return NULL;
     }
